Amended to use static and updated dependencies.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "Validators"
   ],
   "author": "Orgun109uk <orgun109uk@gmail.com> (http://my-site.com/)",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "repository": {
     "type": "git",
     "url": "git://github.com/entity-js/ejs-validators.git"
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "async": "^1.3.0",
+    "ejs-static": "git://github.com/entity-js/ejs-static.git#0.0.1",
     "ejs-sortby": "git://github.com/entity-js/ejs-sortby.git#0.0.2",
-    "ejs-t": "git://github.com/entity-js/ejs-t.git#0.0.2"
+    "ejs-t": "git://github.com/entity-js/ejs-t.git#0.0.3"
   }
 }
